SERVER-30907 Ban $changeStream on non replica set deployments